--- a/.github/workflows/BRWTAB-Client-CI.yml
+++ b/.github/workflows/BRWTAB-Client-CI.yml
@@ -2,9 +2,9 @@ name: BRWTAB Client CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
@@ -31,14 +31,21 @@ jobs:
           cache-dependency-path: client/package-lock.json
 
       # Install project dependencies exactly as specified in package-lock.json
-      - run: npm ci
+      - name: Install Dependencies
+        run: npm ci
 
       # Build the client application if a build script is present in package.json
-      - run: npm run build --if-present
+      - name: Build Client Application
+        run: npm run build --if-present
 
       # Run Prettier to check code formatting
       - name: Prettier Code Formatting
         run: npm run format:check
 
+      # Run ESLint to check for linting issues
+      - name: ESLint
+        run: npm run lint
+
       # Run the CI test script (headless tests or CI-specific test runner)
-      - run: npm run test:ci
+      - name: Run CI Tests
+        run: npm run test:ci
