--- a/compose.yml
+++ b/compose.yml
@@ -1,4 +1,15 @@
 services:
+  pocketbase:
+    image: adrianmusante/pocketbase:latest
+    container_name: prwt-pocketbase
+    ports:
+      - "8090:8090"
+    volumes:
+      - ./database:/pb
+    user: "0:0"
+    entrypoint: ["pocketbase"]
+    command: ["serve", "--http=0.0.0.0:8090", "--dir=/pb/pb_data"]
+
   client:
     image: prwt-client
     build:
@@ -11,3 +22,6 @@ services:
       - /app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
+      - NG_APP_PB_URL=http://pocketbase:8090
+    depends_on:
+      - pocketbase
